fix: [054-vote-ranking] 투표 랭킹 필터링 구조 변경